# cookiecutter-server

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  deploy.yml  release.yml
src/cc_server/: __init__.py  __main__.py  main.py
src/cookiecutter_server/: __main__.py  main.py
tests/: __init__.py  pytest.ini  test_main.py
tests/template/: cookiecutter.json
tests/template/{{cookiecutter.project_slug}}/: README.md
