[project]
name = "cookiecutter-server"
version = "1.2.0"
description = "A local development server to get live previews of cookiecutter templates."
authors = [
    {name = "Sebastian Straub", email = "sebastian.straub@alexanderthamm.com"},
    {name = "Christian Baur", email = "christian.baur@alexanderthamm.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.9,<3.14"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "typer>=0.15.1",
    "cookiecutter>=2.6.0",
    "watchdog>=6.0.0",
    "dirsync>=2.2.5",
    "pyyaml>=6.0.2"
]

[project.scripts]
cc_server = "cookiecutter_server.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.1.0",
    "flake8>=7.1.2"
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["uv>=0.5,<0.6"]
build-backend = "uv"
